<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/primary"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/meet_the_dev"
            android:textSize="35sp"
            android:textColor="@color/accent"
            android:layout_gravity="center"
            android:background="@color/primary"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/profile_page"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_pic"
            app:layout_constraintTop_toBottomOf="@+id/profile_page"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:id="@+id/profile_pic"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/agus_ardiasyah"
            android:textSize="25sp"
            android:textColor="@color/text"
            app:layout_constraintTop_toBottomOf="@+id/profile_pic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:id="@+id/profile_name"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="@color/text"
            app:layout_constraintTop_toBottomOf="@+id/profile_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/profile_mail"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_github"
            android:background="@drawable/round_button"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="@color/text"
            app:layout_constraintTop_toBottomOf="@+id/profile_mail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="50dp"
            android:id="@+id/home_button"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>