<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailPage"
    android:background="@color/primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/drive"
                android:id="@+id/detail_image"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/action_share"
                android:text="@string/share"
                android:textSize="20sp"
                app:icon="@drawable/share"
                app:iconSize="30dp"
                android:background="@drawable/round_button"
                android:layout_gravity="bottom|center"
                />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/movie_title"
            android:textSize="30sp"
            android:textColor="@color/text"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/detail_title"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/movie_overview"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:paddingHorizontal="15dp"
            android:layout_marginVertical="20dp"
            android:layout_gravity="center"
            android:id="@+id/detail_overview"
            android:justificationMode="inter_word"
            />
    </LinearLayout>

</ScrollView>